src/FinancialForce Accounting/objects/codaPurchaseInvoice__c.object
<CustomObject>
    <customHelpPage>codahelppurchaseinvoice</customHelpPage>
    <description>Holds information that applies to the whole payable invoice such as vendor information and due date.</description>
    <fields>
        <fullName>AccountAddress__c</fullName>
        <formula>Account__r.BillingStreet + &apos; &apos; + Account__r.BillingCity + &apos; &apos; + Account__r.BillingState + &apos; &apos; + Account__r.BillingPostalCode + &apos; &apos; + Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountECCountryCode__c</fullName>
        <formula>TEXT(Account__r.CODAECCountryCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInvoiceNumber__c</fullName>
        <description>The vendor reference.</description>
        <label>Vendor Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <description>The reason this Payable Invoice was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The date the payable invoice is due for payment.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnableReverseCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpensesNetTotal__c</fullName>
        <description>Total value of expense items on the invoice, before tax.
SUM: Payable Invoice Expense Line Item: NetValue</description>
        <label>Expenses Net Total</label>
        <summarizedField>codaPurchaseInvoiceExpenseLineItem__c.NetValue__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceExpenseLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpensesOutputTaxTotal__c</fullName>
        <label>Expenses Output Tax Total</label>
        <summarizedField>codaPurchaseInvoiceExpenseLineItem__c.OutputTaxValue__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceExpenseLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpensesTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Expense Line Items.</description>
        <label>Expenses Tax 1 Total</label>
        <summarizedField>codaPurchaseInvoiceExpenseLineItem__c.TaxValue1__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceExpenseLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpensesTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Expense Line Items.</description>
        <label>Expenses Tax 2 Total</label>
        <summarizedField>codaPurchaseInvoiceExpenseLineItem__c.TaxValue2__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceExpenseLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HoldStatus__c</fullName>
        <label>Hold Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the payable invoice was created.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceDescription__c</fullName>
        <description>A description of the payable invoice.</description>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceStatus__c</fullName>
        <description>The current status of the payable invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Ready To Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <description>The total value of all items and expenses on the payable invoice, including the tax.</description>
        <formula>NetTotal__c  +  TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemsNetTotal__c</fullName>
        <description>Total value of product items on the invoice, before tax.
SUM: Payable Invoice Line Item: NetValue</description>
        <label>Items Net Total</label>
        <summarizedField>codaPurchaseInvoiceLineItem__c.NetValue__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ItemsOutputTaxTotal__c</fullName>
        <label>Items Output Tax Total</label>
        <summarizedField>codaPurchaseInvoiceLineItem__c.OutputTaxValue__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ItemsTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Product Line Items.</description>
        <label>Items Tax 1 Total</label>
        <summarizedField>codaPurchaseInvoiceLineItem__c.TaxValue1__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ItemsTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Product Line Items.</description>
        <label>Items Tax 2 Total</label>
        <summarizedField>codaPurchaseInvoiceLineItem__c.TaxValue2__c</summarizedField>
        <summaryForeignKey>codaPurchaseInvoiceLineItem__c.PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <formula>TEXT(Transaction__r.MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <description>The total value of items and expenses on the puchase invoice, before tax.</description>
        <formula>ItemsNetTotal__c  +  ExpensesNetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( InvoiceStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( Transaction__r.DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,
if( Transaction__r.DocumentTotal__c == Transaction__r.DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference1__c</fullName>
        <label>Reference 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference2__c</fullName>
        <label>Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoices (Tax Code)</relationshipLabel>
        <relationshipName>PurchaseInvoicesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxDocumentCode__c</fullName>
        <label>External Tax Document Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxStatus__c</fullName>
        <description>Tax status of the invoice.</description>
        <label>External Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxTotal__c</fullName>
        <formula>ItemsTax1Total__c  +  ExpensesTax1Total__c + ItemsTax2Total__c  +  ExpensesTax2Total__c - ItemsOutputTaxTotal__c - ExpensesOutputTaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VATRegistrationNumber__c</fullName>
        <formula>Account__r.CODAVATRegistrationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Payable Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountInvoiceNumber__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>Period__c</columns>
        <columns>DueDate__c</columns>
        <columns>InvoiceCurrency__c</columns>
        <columns>InvoiceTotal__c</columns>
        <columns>InvoiceStatus__c</columns>
        <columns>RegisteredDate__c</columns>
        <columns>DiscardReason__c</columns>
        <columns>PaymentStatus__c</columns>
        <columns>OutstandingValue__c</columns>
        <columns>OwnerCompany__c</columns>
        <columns>MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIN{000000}</displayFormat>
        <label>Payable Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>